cambie estilos para el menu en movile

--- a/noticias.html
+++ b/noticias.html
@@ -29,9 +29,9 @@
             <div class="header-iconmenu">
                 <input type="checkbox" id="menu-bar">
                 <!--este input es para hacer un menu desplegable-->
-                <label class="icon-menu" for="menu-bar"></label>
+                <label class="icon-menu icon-noticias" for="menu-bar"></label>
                 <!--esta label tambien es para el menu bar-->
-                <nav class="menu">
+                <nav class="menu noticias-menu">
 
                     <a href="index.html">Inicio</a>
                     <a href="nosotros.html">Nosotros</a>
